feat: get buildings
